--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
 
         <div class="credit-box">
-            <p>Made By <a href="#">Rizwan Waseem.</a></p>
+            <p>Made By <a href="https://www.instagram.com/rizwanwaseem_/profilecard/?igsh=NGM1NGh6aTlzanEy" target="_blank">Rizwan Waseem.</a></p>
         </div>
     </section>
 </body>
