--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <h2 class="sub-head">Our Celestial Companion.</h2>
         <p class="home-text">The Moon, Earth's only natural satellite, is a beacon of wonder in the night sky. Its phases and craters tell stories of cosmic history, inspiring curiosity, art, and exploration for generations.</p>
         <div class="btn-box">
-            <a href="#" class="btn-1">learn More!</a>
-            <a href="#" class="btn-2">Watch Video</a>
+            <a href="https://en.wikipedia.org/wiki/Moon" class="btn-1" target="_blank">learn More!</a>
+            <a href="https://www.youtube.com/watch?v=2iSZMv64wuU" class="btn-2" target="_blank">Watch Video</a>
         </div>
 
         <div class="articles-box">
@@ -37,7 +37,7 @@
             <div class="article-card">
                 <h2 class="card-head">01. China Started Exploration On Moon.</h2>
                 <p class="card-text">In 2020, China’s Chang'e 5 mission successfully returned lunar samples to Earth, marking a major milestone in lunar exploration.</p>
-                <a href="#" class="card-btn">Read Article &rarr;</a>
+                <a href="https://shorturl.at/EQAta" target="_blank" class="card-btn">Read Article &rarr;</a>
             </div>
         </div>
 
@@ -45,5 +45,6 @@
             <p>Made By <a href="https://www.instagram.com/rizwanwaseem_/profilecard/?igsh=NGM1NGh6aTlzanEy" target="_blank">Rizwan Waseem.</a></p>
         </div>
     </section>
+    <script src="scripts/script.js"></script>
 </body>
 </html>
